# general_robotics

./: CMakeLists.txt  LICENSE  README.md  notes.md  package.xml  workflow_diagrams_decision_criteria.md
config/: amcl.yaml  segmentation.rviz
fetch_api/: CMakeLists.txt  README.md  package.xml  setup.py
fetch_api/scripts/: ifetch
fetch_api/src/fetch_api/: arm.py  arm_joints.py  base.py  gripper.py  gripper_viz.py  moveit_goal_builder.py
launch/: dewey_nav.launch  generate_path_constraints.launch  project_env.launch
models/: myworld.world  techin517_world.world  test_floorplan.world
models/TECHIN517_GIX/: model.config  model.sdf
models/TECHIN517_GIX/meshes/: TECHIN517_GIX.dae  TECHIN517_GIX.stl
models/bag/: model.config  model.sdf
models/bag/meshs/: bag.dae
models/floorplan/: model.sdf
models/floorplan/meshes/: gix216plus.dae
scripts/: actserver_go_to_point.py  dewey_nav.py  grab_frame.py  houghLinesCV2.py  laser_listener.py  milestone1.py  moveit_approach_object.py  moveit_example.py  moveit_final.py  moveit_joint_target.py  moveit_reach_object.py  moveit_retract_object.py  navigate.py  navigate_old.py  navigate_phy.py  navigate_phy_parallel_controller.py  object_pose_estimator.py  tf_listener.py
src/: motionplan.cpp  moveit_test.cpp  segment_door.cpp  segment_object.cpp  segmentation.cpp
