<?xml version="1.0"?>
<package format="2">
  <name>fetch_api</name>
  <version>0.1.0</version>
  <description>High-level API for controlling the Fetch robot.</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
